# Lute_AI_Video

./: .dockerignore  .env.example  .gitignore  .grype.yaml  .trivyignore.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  LICENSE  Makefile  PLAN_SPRINT1.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: audit-fix.md  config.yml
.github/workflows/: ci.yml  deploy-gh-pages.yml  (+3 more)
configs/: admin-csrf-contract.yaml  admin-logs-keyboard-navigation-contract.yaml  api-key-storage-fallback-contract.yaml  api-rate-limit-contract.yaml  api-response-metadata-contract.yaml  archive-draft-link-drift-contract.json  asset-picker-request-boundary-contract.yaml  authorized-live-token-smoke-approval-template.json  authorized-live-token-smoke-sample-plan-contract.json  backend-route-auth-contract.yaml  background-task-registry-contract.yaml  docker-dev-tool-parity-contract.json  docs-link-check-scope.txt  env-example-no-secret-contract.yaml  frontend-store-persistence-migration-contract.yaml  gate-approve-idempotency-contract.yaml  health-endpoint-no-secret-contract.yaml  l4c-token-smoke-plan-template.json  lighthouse-nginx-timeout-contract.yaml  lighthouse-rsync-artifact-exclude-contract.yaml  markdown-frontmatter-compliance-contract.json  media-url-sanitizer-contract.yaml  openapi-generated-types-drift-contract.yaml  poyo-current-provider-revalidation-contract.json  poyo-model-matrix-stale-warning-contract.json  prometheus-metrics-contract.yaml  provider-cost-catalog.v1.json  pyright-suppression-baseline.json  pyright-test-baseline.json  regenerate-downstream-invalidation-contract.yaml  release-smoke-token-opt-in-contract.json  remotion-no-provider-key-contract.json  root-directory-governance-contract.json  s4-footage-filtering-contract.yaml  scenario-state-persistence-contract.yaml  scripts-governance-contract.json  server-inventory-stable.md  settings-api-key-accessibility-contract.yaml  thumbnail-coverage-dry-run-contract.yaml  w1-31-provider-billing-reconciliation-template.json  (+1 more)
deploy/: CLOUDBASE_STEP_BY_STEP.md  local-run.md  tencent-cloudbase.md
docs/: 2026-04-29-deep-audit-report.md  2026-04-29-ui-quality-audit.md  dept_onboarding_guide.md  disaster_recovery_runbook.md  poyo-trigger-words.md
eval/: .ai-fluency-index-20260425.md.baiduyun.uploading.cfg  .plan-GAP12-i18n.md.baiduyun.uploading.cfg  .plan-GAP14-asset-library.md.baiduyun.uploading.cfg  .plan-GAP16-postgres-saver.md.baiduyun.uploading.cfg  2026-04-27_vulnerability_report.md  ai-fluency-index-20260425.md  architecture-deep-audit-report-20260506.md  plan-GAP12-i18n.md  plan-GAP14-asset-library.md  plan-GAP16-postgres-saver.md  plan-GAP17-webhook.md  plan-GAP18-cicd.md  plan-GAP19-20.md  plan-L4.4-L5x-self-verification.md
migrations/: README.md  alembic.ini
plan/: 2026-04-26_multi-scenario-roadmap.md  2026-04-27_daily-report_and_tomorrow-plan.md  2026-04-27_phase2_execution_plan.md  2026-04-27_post-demo-adjusted-plan.md  2026-04-28_post-demo-action-plan.md  brand-asset-template.md  phase1-implementation-plan.md
rendering/: Dockerfile  package-lock.json  package.json  server.mjs  tsconfig.json
scripts/: .overwrite_fix.py.baiduyun.uploading.cfg  .patch_api_submit_review.py.baiduyun.uploading.cfg  apply_fix_patch.py  authorized_live_token_smoke_harness.py  backup_manifest.py  backup_production.sh  bootstrap_postgres.py  brand_review_audit.py  brand_token_intake.py  build_authorized_live_approval_record.py  build_authorized_live_smoke_packet.py  build_authorized_live_test_plan_readiness_report.py  build_pending_review_asset_packet.py  build_pending_review_decision_record.py  build_provider_account_readiness_record.py  build_w1_31_billing_approval.py  build_w5_acceptance_plan.py  build_w5_fast_runtime_binding.py  check_openapi_types_drift.py  check_pyright_ratchet.py  check_step_order_consistency.py  check_w5_fast_readiness.py  commercial_token_smoke_preflight.py  create_admin.py  debug_poyo_403.py  deploy_alembic_gate.sh  dev_start.py  diagnose_apis.py  diagnose_poyo.py  discover_poyo_models.py  e2e_influencer_remix.py  e2e_verify_distribution.py  fix_page_mac.py  fix_remotion.sh  generate_portfolio_posters.py  generate_portfolio_thumbnails.py  install_backup_cron.sh  l4c_token_smoke_plan.py  l4d_image_only_smoke.py  l4d_paired_smoke.py  (+49 more)
src/: _version.py  api.py  api_assets.py  config.py  telemetry.py  telemetry_endpoint.py  telemetry_prometheus.py
strategy_source/: __init__.py
tests/: conftest.py  generation_policy_test_utils.py  loadtest_multi_tenant.py  run_track3_tests.py  test_acceptance_record_repository.py  test_acceptance_records_router.py  test_admin.py  test_admin_csrf.py  test_admin_csrf_contract.py  test_admin_endpoints_smoke.py  test_admin_health_provider_probe_guard.py  test_admin_tenant_keys.py  test_adr_governance.py  test_agents.py  test_ai_stability_markers.py  test_api.py  test_api_assets_legacy_boundary.py  test_api_rate_limit_contract.py  test_api_response_metadata_contract.py  test_archive_draft_link_drift.py  test_artifact_acceptance_contracts.py  test_artifact_acceptance_service.py  test_aspect_ratio_fanout.py  test_asset_library.py  test_asset_models.py  test_asset_stores_cutover.py  test_asset_stores_memory.py  test_audit_logger.py  test_auditor.py  test_auditor_quality_v2.py  test_auth_context.py  test_authorized_live_approval_record_builder.py  test_authorized_live_harness.py  test_authorized_live_poyo_runtime.py  test_authorized_live_poyo_submitter.py  test_authorized_live_provider_harness.py  test_authorized_live_smoke_packet_builder.py  test_authorized_live_test_plan_readiness_report.py  test_av_sync.py  test_backend_route_auth_contract.py  (+239 more)
web/: .gitignore  Dockerfile  Dockerfile.nginx  eslint.config.mjs  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  playwright.ui.config.ts  pnpm-lock.yaml  postcss.config.js  postcss.config.mjs  tailwind.config.js  vitest.config.ts  vitest.setup.ts
(+763 files in other folders)
