[project]
name = "short-video-agent"
version = "0.2.0"
description = "Multi-agent short video creation system for cross-border e-commerce — wearable breast pump & feeding appliances"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "supabase>=2.0",
    "httpx>=0.27",
    "redis>=5.0",
    "celery>=5.3",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",   # pyflakes — catches undefined names, unused imports (real bugs)
    "I",   # isort — import ordering
    "UP",  # pyupgrade — modern syntax
]
ignore = [
    "F841",  # Locally imported/assigned but never used (common during refactors)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N"]  # Allow non-PEP8 naming in test files

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -v"
# Custom markers — 跑 e2e 套件:`pytest -m e2e`
# e2e 测试默认 skip(skipif 检测 env credentials),只有用户配齐外部资源才跑
markers = [
    "e2e: 端到端测试,需要真实 API key / platform credentials / webhook URL",
]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/migrations",
    "**/__pycache__",
]
# Phase A: basic mode (default — no strict rules yet)
# Phase B: reportMissingTypeArgument = true
# Phase C: reportUnknownMemberType = true, reportUnknownVariableType = true
# Phase D: full strict

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/prompts/*",
    "*/__init__.py",
]
