[project]
name = "short-video-agent"
version = "2.0.0"
description = "Multi-agent short video creation system for cross-border e-commerce — wearable breast pump & feeding appliances"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=1.3.9",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=1.4.6",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
    "psycopg[binary]>=3.2",
    "langgraph-checkpoint-postgres>=3.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.31",
    "supabase>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.18.5",
    "bcrypt>=4.2",
    "Pillow>=12.3.0",
    "yt-dlp==2026.7.4",
    "faster-whisper>=1.2.1",
    "transformers>=5.13.0",
    "torch>=2.12.1",
    "c2pa-python==0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.3",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pyright>=1.1.407",
    "pip-audit>=2.9.0",
]

[tool.uv]
package = false
constraint-dependencies = [
    "cryptography>=48.0.1",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-sdk>=0.3.15",
    "langsmith>=0.8.18",
    "starlette>=1.3.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   # pyflakes — catches undefined names, unused imports (real bugs)
    "I",   # isort — import ordering
    "UP",  # pyupgrade — modern syntax
]
ignore = [
    "F841",  # Locally imported/assigned but never used (common during refactors)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N"]  # Allow non-PEP8 naming in test files

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--tb=short -v"
# Custom markers — 跑 e2e 套件:`pytest -m e2e`
# e2e 测试默认 skip(skipif 检测 env credentials),只有用户配齐外部资源才跑
markers = [
    "e2e: 端到端测试,需要真实 API key / platform credentials / webhook URL",
    "llm_stability: 标记 LLM 非确定性测试 — 同 prompt 跑 N 次,验证输出 schema/字段稳定。CI 默认 skip(需 DEEPSEEK/OPENAI key + 配额),手动触发:`pytest -m llm_stability`",
    "media_stability: 标记媒体生成非确定性测试 — 同 prompt 生成 N 次,验证 duration/file_size 一致性。CI 默认 skip(需 POYO key + 配额),手动触发:`pytest -m media_stability`",
    "hermetic_slow: 本地 hermetic 慢回归。默认 pytest 不跑；显式传 `-m hermetic_slow` 或 `PYTEST_INCLUDE_HERMETIC_SLOW=1` 时启用",
]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["src", "tests"]
extraPaths = ["."]
executionEnvironments = [
    { root = "src", extraPaths = ["."] },
    { root = "tests", extraPaths = ["."] },
]
exclude = [
    "**/node_modules",
    "**/migrations",
    "**/__pycache__",
    "src/quality/**",
]
# Phase A: basic mode (default — no strict rules yet) ✅ 已完成
# Phase B: 泛型参数 + 边界变量 ✅ 已完成
reportMissingTypeArgument = true
reportPossiblyUnboundVariable = true
# Phase C/D: Unknown 类型治理 — 经评估，reportUnknown* 规则在 dict[str,Any] 为主
# 的代码库中噪音远大于价值，暂不全局启用。核心收益已在 A+B 中捕获。
# 2026-05-07 评估: 启用后 1258 错误(631 unknownVariable + 627 unknownMember),
# 其中 60%+ 来自 dict/list[Any] 推断限制，非真实缺陷。修复 ROI 为负。
# 2026-06-09: step_utils.py/config.py are checked by their focused pyright
# command; this project-wide config intentionally keeps Unknown diagnostics
# disabled to avoid turning dynamic pipeline payloads into false failures.

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/prompts/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 35
